# research

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml  service-provisioning.yml
demand_forecast/: CLAUDE.md  README.md  eda.ipynb
demand_forecast/configs/: experiment_1.yaml  experiment_2.yaml  experiment_3.yaml
demand_forecast/notebooks/: eda.ipynb  forecast_plus_baseline.ipynb  proba.ipynb  scripts.py  selected_tours.csv  trend tours.ipynb  trend_tours.ipynb
demand_forecast/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
demand_forecast/notebooks/eda/: adp_pageview.ipynb  availability.ipynb
demand_forecast/scripts/: download_data.py
demand_forecast/scripts/db_cluster_requirements/: databricks_init_pip_install.sh  db_cluster_requirements.txt
demand_forecast/scripts/sql/: daily_bookings.sql
demand_forecast/src/: analytics_baseline_forecast.py  daily_demand.py  data_utils.py  env.py  metrics.py  plots.py  select_tours.py  spark_utils.py  time_series.py  tmp_udf.py  transforms.py
demand_forecast/src/config/: analytics_baseline.py  main.py  paths.py  regular_tours.py  trending_tours.py
demand_forecast/src/data_collection/: location_category.py  select_tours.py  tour_sales.py
demand_forecast/src/modelling/: analytics_baseline.py  calendar_features.py  utils.py
demand_forecast/src/preprocessing/: cut_leading_zeros.py  fill_gaps.py  fill_gaps_pandas.py  fill_gaps_spark.py
research/: spark_utils.py
research/demand_forecast/: tour_online_status.py
(+1 files in other folders)
