[tool.poetry]
name = "research"
version = "0.1.0"
description = "misc utils"
authors = []
packages = [
    {include = "research"},
    { include = "demand_forecast" },
]

[tool.poetry.dependencies]
python = "~3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
